# SoftwareEngBot

./: .breakpoints  BlackjackHandler.py  CalculateHandler.py  DiscordMessageProvider.py  HelpHandler.py  JokeHandler.py  MessageHandler.py  MessageProvider.py  ReminderHandler.py  WeatherHandler.py  YoutubeHandler.py  YoutubeHandler2.py  main.py  pyproject.toml  useful.txt  weatherAPI.py
