[tool.poetry]
name = "repl_python3_SoftwareEngBot"
version = "0.1.0"
description = ""
authors = ["Clemens, Bernhard, Julian, Aaron"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pytz = "^2021.3"
emoji = "^1.6.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
